--- a/style.css
+++ b/style.css
@@ -1,3 +1,40 @@
 body {
     font-family:Verdana, Geneva, Tahoma, sans-serif;
+    margin: 0px 24px 0px 24px;
+}
+
+/*Header and Navigation*/
+
+header {
+    display:flex;
+    align-items:center; 
+    background-color: red;
+    height: 64px;
+}
+header p {
+    font-size: 32px;
+}
+header img {
+    width: 3rem;
+}
+nav {
+    background-color: pink;
+    margin-left:auto;
+    margin-right: 0px;
+}
+nav a{
+    text-decoration: none;
+    padding-left: 16px;
+    color: black;
+}
+
+/*Section 1*/
+
+#section1 {
+    background-color: lightgray;
+    display: inline-flex
+}
+#s1_left img{
+    padding: 32px 24px;
+    width: 60%;
 }
